--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,9 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
-name = "lumache"
+name = "CelLink"
+version = "0.1.0"
 authors = [{name = "Graziella", email = "graziella@lumache"}]
-dynamic = ["version", "description"]
+dynamic = ["description"]
