--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,5 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "CelLink"
-version = "0.1.0"
-authors = [{name = "Graziella", email = "graziella@lumache"}]
-dynamic = ["description"]
+version = "0.1.4"
+description = "Cell linking package"
