--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,24 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "CelLink"
 version = "0.1.4"
 description = "Cell linking package"
+requires-python = ">=3.9"
+dependencies = [
+    "numpy==1.26.4",
+    "pandas==2.2.2",
+    "matplotlib==3.8.2",
+    "anndata==0.10.5.post1",
+    "scanpy==1.9.8",
+    "seaborn==0.13.2",
+    "POT==0.9.4",
+    "scipy==1.11.4",
+    "scikit-learn==1.4.0",
+    "networkx==3.2.1"
+]
 
 [tool.setuptools.packages.find]
 include = ["CelLink*"]
